--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ Thumbs.db
 *.log
 npm-debug.log*
 
+# Test coverage
+coverage/
+
 # Editor / IDE (optional; uncomment if you want to ignore)
 # .vscode/
 # .idea/
