--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "serve . -l 5000",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:integration": "cross-env RUN_INTEGRATION=1 jest tests/api.integration.test.js --runInBand"
+    "test:integration": "npx cross-env RUN_INTEGRATION=1 jest tests/api.integration.test.js --runInBand"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
